added start and stop vm and lxc
