# .openapi/swagger.sanitized.json
@@ -236,6 +236,90 @@
         }
       }
     },
+    "/api/v1/proxmox/container/{vmid}/start": {
+      "post": {
+        "tags": [
+          "Proxmox"
+        ],
+        "summary": "Start a Proxmox LXC container.",
+        "operationId": "StartProxmoxContainer",
+        "parameters": [
+          {
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "VMID",
+            "description": "VMID to start.",
+            "name": "vmid",
+            "in": "path",
+            "required": true
+          },
+          {
+            "description": "Request body.",
+            "name": "Body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/ProxmoxVMStartRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/ProxmoxVMStartResponse"
+          },
+          "400": {
+            "description": "Invalid request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/proxmox/container/{vmid}/stop": {
+      "post": {
+        "tags": [
+          "Proxmox"
+        ],
+        "summary": "Stop a Proxmox LXC container.",
+        "operationId": "StopProxmoxContainer",
+        "parameters": [
+          {
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "VMID",
+            "description": "VMID to stop.",
+            "name": "vmid",
+            "in": "path",
+            "required": true
+          },
+          {
+            "description": "Request body.",
+            "name": "Body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/ProxmoxVMStartRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/ProxmoxVMStartResponse"
+          },
+          "400": {
+            "description": "Invalid request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/v1/proxmox/lxc": {
       "post": {
         "tags": [
@@ -428,6 +512,48 @@
             "format": "int64",
             "x-go-name": "VMID",
             "description": "VMID to start.",
+            "name": "vmid",
+            "in": "path",
+            "required": true
+          },
+          {
+            "description": "Request body.",
+            "name": "Body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/ProxmoxVMStartRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/ProxmoxVMStartResponse"
+          },
+          "400": {
+            "description": "Invalid request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/proxmox/vm/{vmid}/stop": {
+      "post": {
+        "tags": [
+          "Proxmox"
+        ],
+        "summary": "Stop a Proxmox QEMU VM.",
+        "operationId": "StopProxmoxVM",
+        "parameters": [
+          {
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "VMID",
+            "description": "VMID to stop.",
             "name": "vmid",
             "in": "path",
             "required": true
@@ -6162,7 +6288,7 @@
           "x-go-name": "User"
         }
       },
-      "x-go-package": "github.com/babbage88/go-infra/webutils/deployment"
+      "x-go-package": "github.com/babbage88/go-infra/services/proxmox"
     },
     "SoftDeleteRoleByIdRequest": {
       "type": "object",
